--- a/views/tour.pug
+++ b/views/tour.pug
@@ -4,9 +4,10 @@ include _reviewCard
 block append head
   link(rel='stylesheet' href='https://unpkg.com/leaflet@1.8.0/dist/leaflet.css'
    integrity='sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==' crossorigin='')
-  script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
-   integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
-   crossorigin="")
+  script(src='https://unpkg.com/leaflet@1.8.0/dist/leaflet.js'
+   integrity='sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=='
+   crossorigin='')
+   script(src='https://js.stripe.com/v3/') 
 
 mixin overviewBox(label , icons, text)
   .overview-box__detail
@@ -94,4 +95,7 @@ block content
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
-        button.btn.btn--green.span-all-rows Book tour now!
+        if user 
+          button.btn.btn--green.span-all-rows#book-tour(data-tour-id= `${tour.id}`) Book tour now!
+        else 
+          a.button.btn.btn--green.span-all-rows(href='/login') Log in to book tour
