succefully created a payemtn successs page with stripe

--- a/views/base.pug
+++ b/views/base.pug
@@ -19,6 +19,7 @@ html
 
     //Login
     block login 
+    
 
     // FOOTER
     include _footer
@@ -26,4 +27,6 @@ html
     //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js' integrity='sha512-3BBFWr73Xrf8GRjO+0pl0cbVwESBvg3ovnuCXpoqOkC/mkt/hTkFtutUPrwRz8eLySYvy5v1daulkyUZYvH8jw==' crossorigin='anonymous' referrerpolicy='no-referrer')
     //- script(src='/js/leaflet.js')
     //- script(src='/js/login.js')
+    
+    script(src='https://js.stripe.com/v3/') 
     script(src='/js/bundled/index.js')
