adding crud operations for bookingTour api

--- a/views/account.pug
+++ b/views/account.pug
@@ -15,7 +15,7 @@ block content
       nav.user-view__menu
         ul.side-nav
           +navItem('#','Settings','settings',true)
-          +navItem('#','My bookings','briefcase')
+          +navItem('/my-tours','My bookings','briefcase')
           +navItem('#','My reviews','star')
           +navItem('#','My Billing','credit-card')
         -if(user.role ==='admin')
