fix | frontend uri issues

--- a/views/account.pug
+++ b/views/account.pug
@@ -45,7 +45,7 @@ block content
               img.form__user-photo(src=`/img/users/${user.photo}`, alt=`${user.name}`)
               //-file picker 
               input.form__upload(type='file', accept='image/*', id='photo' ,name='photo')
-              label(for='photo') choose new photo 
+              label(for='photo') choose your profile photo 
 
 
             .form__group.right
