--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -4,7 +4,7 @@ block content
   main.main
     .login-form
       h2.heading-secondary.ma-bt-lg Sign up your account
-      form.form.form--login
+      form.form.form--signup
         .form__group
           label.form__label(for='name') Name
           input#name.form__input(type='text', placeholder='your name', required)
@@ -15,7 +15,7 @@ block content
           label.form__label(for='password') Password
           input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
         .form__group.ma-bt-md
-          label.form__label(for='passwordConfirm') Confirm your password
-          input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')  
+          label.form__label(for='confirmPassword') Confirm your password
+          input#passwordConfirm.form__input(type='password', placeholder='••••••••', required, minlength='8')  
         .form__group
           button.btn.btn--green Sign up
